--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ページタイトル</title>
+    <link rel="stylesheet" href="test.css">
+</head>
+<body>
 
+    <header>
+        <h1>ウェブサイトのヘッダー</h1>
+    </header>
+
+    <main>
+        <section>
+            <h2>メインコンテンツのセクション</h2>
+            <p>ここに主要な内容を記述します。</p>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2025 Your Name or Company</p>
+    </footer>
+
+</body>
+</html>
