--- a/index.html
+++ b/index.html
@@ -3,13 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ページタイトル</title>
+    <title>市川市の紹介</title>
     <link rel="stylesheet" href="test.css">
 </head>
 <body>
 
     <header>
-        <h1>ウェブサイトのヘッダー</h1>
+        <h1>ニッケコルトンプラザ</h1>
+        <p>イオン</p>
+        <p>LOFT</p>
+        
+
+        <h2>市川動植物園</h2>
+        <p>かわいい動物ちゃんがいっっぱい</p>
+        
     </header>
 
     <main>
